03-09-2020 09:07 Uhr Änderungen: Es wurde an der Digital-Uhr gearbeitet

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,11 @@ h1 {
     font-family: verdana;
     font-size: 300%;
   }
+
+  .clock {
+
+    font-size: 40px;
+    font-family: Orbitron;
+    letter-spacing: 3px;
+
+  }
